---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: [[u128; 0]; 2] = [[], []];

fn main(b: u8) -> pub u8 {
    // Safety: comment added by `nargo expand`
    let _d: [[u128; 0]; 2] = unsafe { func_3(func_3([], b)[1_u32], 0_u8) };
    b
}

unconstrained fn func_3(_a: [u128; 0], _b: u8) -> [[u128; 0]; 2] {
    G_A
}
